# Sonic1100

./: CMakeLists.txt  CMakeSettings.json  README.md
Native/Resources/: resources.qrc
Native/Resources/WebUi/: app.bundle.js  index.html  test.js
Native/Source/: PythonProcessor.cpp  PythonProcessor.h  WebManager.cpp  WebManager.h  main.cpp
Native/Source/Python/: ExecutionInstance.cpp  ExecutionInstance.h  PythonProcessor.cpp  PythonProcessor.h
Native/Source/Utils/: generateId.cpp  generateId.h
Resources/: qml.qrc
Resources/NativeUi/: main.qml
Resources/WebUi/: index.html  test.js
Source/: WebManager.cpp  WebManager.h  main.cpp
Web/: .babelrc  .gitignore  CMakeLists.txt  package-lock.json  package.json  webpack.config.js
Web/Source/: index.js
Web/Source/Components/: App.js
Web/Source/Components/MenuBar/: MenuBar.js  MenuBarContainer.js  index.js
Web/Source/Components/Sessions/: SessionEditor.js  SessionEditorContainer.js  Sessions.js
Web/Source/Services/: commChannel.js  sessionService.js
Web/Source/Store/: defaultState.js  index.js
Web/Source/Store/Actions/: consts.js
Web/Source/Store/Actions/Sessions/: index.js  newSessionCreated.js  newSessionInitiated.js  sessionPlayCode.js
Web/Source/Store/Reducers/: index.js  sessionReducer.js  sessionsReducer.js
Web/Source/Store/Sagas/: index.js  newSessionInitiatedSaga.js  sessionPlayCodeSaga.js
